# minesweeper-bot

./: .gitignore  README.md
bot/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bot.qrc  botdialog.cpp  botdialog.h  botdialog.ui  celltypedialog.cpp  celltypedialog.h  celltypedialog.ui  common.h  dnnclassifier.cpp  dnnclassifier.h  eventfilter.cpp  eventfilter.h  field.cpp  field.h  imagesstorage.cpp  imagesstorage.h  licensesdialog.cpp  licensesdialog.h  licensesdialog.ui  lineeditwfocus.cpp  lineeditwfocus.h  main.cpp  minesweeper_bot.pro  model_960_140_21_3.cpp  model_960_140_21_3.h  screen.cpp  screen.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
bot/models/: CMakeLists.txt  bruteforce.cpp  bruteforce.h  classifier.cpp  classifier.h  main.cpp  tetragonal_neural.cpp  tetragonal_neural.h
bot/res/: actions.xcf  gear.xcf  left_top.xcf  move.xcf  restart.xcf  start.xcf
common/: minesweeperbot.py  setup.py
emulator/: minesweeper-emulator.py
solvers/tetragonal_neural/: README.md  miner_dnn.ipynb  miner_dnn.py  mines_field_generator.ipynb  mines_field_generator.py  trainer.py
solvers/tetragonal_neural/packer/: CMakeLists.txt  main.cpp
